# colorlight-litex

./: README.md
python/: recieve.py  recieve_test.py
rust/SoC_demo/: README.md  rust-project.json
rust/SoC_demo/.cargo/: flash.sh
rust/SoC_demo/src/: adc.rs  dac.rs  gpio.rs  main.rs  pwm.rs
rust/adc_eth_test/: Cargo.toml
rust/adc_eth_test/.cargo/: flash.sh
rust/adc_eth_test/src/: gpio.rs  gpio1.rs  leds.rs  macro_test.rs  main.rs  print.rs  timer.rs
rust/eth_demo/: Cargo.toml  README.md
rust/eth_demo/.cargo/: config
rust/eth_demo/src/: ethernet.rs  main.rs
rust/litex-pac/: Cargo.toml  build.rs  clSOC.svd  memory.x
rust/temp_controller/: Cargo.toml  README.md
rust/temp_controller/src/: adc.rs  gpio.rs  iir.rs  leds.rs  main.rs  timer.rs
soc/: adc.py  colorlight_5a_75x.py  leds.py  pwm.py
