[package]
name = "eth_demo"
version = "0.1.0"
authors = ["Piotr Esden-Tempski <piotr@esden.net>", "DerFetzer <kontakt@der-fetzer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
litex-pac = { path = "../litex-pac" }
riscv-rt  = "0.8.0"
panic-halt = "0.2"
log = "0.4.11"
smoltcp = { version = "0.6", default-features = false, features = ["ethernet", "proto-ipv4", "socket-udp" ,"socket-tcp", "log"] }
managed = { version = "0.7", default-features = false, features = ["map"] }

[profile.release]
# Keep debug information for release builds, for easier debugging.
# It will be removed during the conversion to the .dfu file.
debug = true

# Improve code generation
lto = true
codegen-units = 1

